feat: Mise à jour complète de l'API de gestion des catways - Ajout des modèles, contrôleurs et vues

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,10 @@ SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=user@example.com
 SMTP_PASS=votre_mot_de_passe
-SMTP_FROM=noreply@port-russell.com 
+SMTP_FROM=noreply@port-russell.com
+
+# URL de connexion MongoDB
+MONGODB_URI=mongodb://localhost:27017/marina
+
+# Clé secrète pour les sessions
+SESSION_SECRET=your_session_secret_here 
